<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">职派</string>
    <string name="good">去好评</string>
    <string name="tui_jian">推荐给朋友</string>
    <string name="about_us">关于我们</string>
    <string name="ya_jin_jiao_na">会费缴纳</string>
    <string name="shen_he">审核</string>
    <string name="ya_jin">新会员3折优惠(899元/年)</string>
    <string name="ke_tui">(可退)</string>
    <string name="jin_e">288元</string>
    <string name="wei_pay">微信支付</string>
    <string name="no_limit">不限</string>
    <string name="man">男</string>
    <string name="weman">女</string>
    <string name="out_work">离职</string>
    <string name="in_work">在职</string>
    <string name="ying_jie_sheng">应届生</string>
    <string name="one_year">1年以内</string>
    <string name="three_year">1-3年</string>
    <string name="five_year">3-5年</string>
    <string name="ten_year">5-10年</string>
    <string name="out_ten_year">10年以上</string>
    <string name="no_choice_city">请选择区域</string>
    <string name="no_choice_work">请选择工作</string>
    <string name="all_work">全职</string>
    <string name="part_time_work">兼职</string>
    <string name="high_school">高中或以下</string>
    <string name="zhong_zhuan">中专</string>
    <string name="da_zhuan">大专</string>
    <string name="ben_ke">本科</string>
    <string name="shuo_shi">硕士及以上</string>
    <string name="money_three">3k-5k</string>
    <string name="money_ten">5k-10k</string>
    <string name="money_fifting">10k-15k</string>
    <string name="money_twenty">15k-20k</string>
    <string name="money_up_twenty">20k以上</string>
    <string name="input_shi_gang_xin_zi">请输入试岗薪资</string>
    <string name="input_shi_gang_shi_jian">请输入试岗时间</string>
    <string name="input_descriple">点击编辑</string>
    <string name="shi_pin_jian_li">视频简历</string>
    <string name="fu_jin_ren_cai">附近人才</string>
    <string name="qi_ye_xiu">企业秀</string>
    <string name="choice_condtion">按条件筛选</string>
    <string name="choice_city">选择城市</string>
    <string name="shai_xuan">筛选</string>

    <string name="current_location">当前位置</string>
    <string name="hot_city">热门城市</string>
    <string name="beijing">北京市</string>
    <string name="tong_xin_guan_li">通信管理</string>
    <string name="jian_li_guan_li">简历管理</string>
    <string name="zhi_wei_guan_li">职位管理</string>
    <string name="hui_yuan_zhong_xin">会员中心</string>
    <string name="qian_bao">我的钱包</string>
    <string name="cheng_wei_hui_yuan">成为会员</string>
    <string name="qi_ye_xin_xi">企业信息</string>
    <string name="ke_fu_kan_kui">客服反馈</string>
    <string name="qi_ye_ren_zheng">企业认证</string>
    <string name="wo_de_ke_fu">我的客服</string>
    <string name="she_zhi_fan_kui">设置反馈</string>
    <string name="she_zhi">设置</string>
    <string name="fan_kui">反馈</string>
    <string name="lin_qu_zhuan_shu_quan_yi">领取专属权益</string>
    <string name="choice_employ_city">选择招聘区域</string>
    <string name="work_city">工作地点</string>
    <string name="sex">性别</string>
    <string name="work_status">工作状态</string>
    <string name="work_experence">工作经历</string>
    <string name="xue_li">学历</string>
    <string name="xin_zi_fan_wei">薪资范围</string>
    <string name="shi_gang_xin_zi">试岗薪资(每小时/元)</string>
    <string name="shi_gang_shi_jian">试岗时间(小时)</string>
    <string name="bian_ji_zhi_wei_miao_shu">编辑职位描述:</string>
    <string name="input_edit">点击编辑</string>
    <string name="reset">重置</string>
    <string name="sure">确认</string>
    <string name="pai_dan">派单</string>
    <string name="choice_work">选择招聘职位</string>
    <string name="log_out">退出登录</string>
    <string name="re_location">重新定位</string>

    <string name="return_text">返回</string>
    <string name="load_more">加载更多</string>
    <string name="work_choice">职位搜索</string>

    <string name="read_jian_li">查看简历</string>
    <string name="delete">删除</string>
    <string name="wei_ren_zheng">未认证</string>
    <string name="want_get_work">我要求职</string>
    <string name="recruit">我要招聘</string>
    <string name="log">登录</string>
    <string name="register">注册</string>
    <string name="search_work_business">搜索职位/公司</string>
    <string name="search_work">找工作</string>
    <string name="search_company">找公司</string>
    <string name="send_resume">发布简历</string>
    <string name="work_common_sence">职场资讯</string>
    <string name="personal_info">个人资料</string>
    <string name="user_resume">我的简历</string>
    <string name="user_money">我的钱包</string>
    <string name="try_path">试岗足迹</string>
    <string name="edit">编辑</string>
    <string name="take_work">订阅的职位</string>
    <string name="recommend_work">推荐的职位</string>
    <string name="read">查看</string>
    <string name="search_history">搜索历史</string>
    <string name="hot_search">热门搜索</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_resume_list_search">ResumeListSearchActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_aggrement">登录代表你已同意《职派用户协议》</string>

    <string-array name="search_type">
        <item>职位</item>
        <item>公司</item>
    </string-array>


    <string name="disclaimer">欢迎您使用职派服务！\n
　　为使用职派服务（简称为：本服务），您应当阅读并遵守《职派充值协议》（简称为：本协议）。请您务必审慎阅读、充分理解各条款内容，特别是免除或限制责任的相应条款、管辖与法律适用条款以及开通或使用某项服务的单独协议，并选择接受或不接受。免除或限制责任条款可能以加粗形式提示您注意。
　　除非您已阅读并接受本协议所有条款，否则您无权使用本服务。您对本服务的任何购买等行为及登录、查看等任何使用行为即视为您已阅读并同意本协议的约束。\n
　   一、【协议的范围】\n
　　  1.1【协议适用主体范围】\n
　　      本协议是您与北京众巢科技有限公司之间关于用户使用本服务所订立的协议。职派APP 是北京众巢科技有限公司独家开发并运营。用户是指使用职派相关服务的使用人，包括企业用户和个人求职者。在本协议中更多的称为您。\n
　　  1.2【本服务内容】\n
        1.2.1本协议项下的服务是指北京众巢科技有限公司向用户提供支付宝和微信两种充值方式，用户可通过本服务充值一定金额至“职派APP”中，进行消费。\n
        1.2.2操作方法\n
            用户可以在此充值系统上选择充值方式及充值金额，可选择优惠价288元/年的额度进行充值。并按相应页面提示的程序完成充值。\n
        1.2.3风险提示\n
            充值时，用户请务必仔细确认自己充值的数额及所选择的充值平台。若因用户自身选择金额有误、操作不当或不了解充值用途而造成用户损失的情形时，公司将不会作出任何退款和补偿。\n
        1.2.4充值成功\n
            充值成功后，用户的金额可供自由消费，但公司不会提供返还或兑现的服务。\n
        1.2.5充值失实的处理方法\n
            若因公司充值方式原因造成用户充值失实并经查证属实的，公司将根据用户充值情况进行如下处理：\n
            1.2.5.1因充值方式原因，造成系统充值额小于用户实际充值额的，公司予以补其差额；\n
            1.2.5.2因充值方式原因，造成系统充值额大于用户实际充值额的，公司有权追回差额；\n

    二、【账号与密码安全】\n
        2.1您在使用职派的服务时需要注册一个账号。\n
        2.2职派特别提醒您一个妥善保管您的账号和密码。当您使用完毕后，应安全退出。因您保管不善可能导致遭受盗号或密码失窃，责任由您自行承担。\n
    三、权利义务\n
　　     3.1 【关于收费】\n
　　          本服务是北京众巢科技有限公司提供的收费服务，您须在按照本服务的收费标准支付相应费用后，方可使用本服务。\n
             北京众巢科技有限公司可能会根据本服务的整体规划，对本服务的收费标准、方式等进行修改和变更，前述修改、变更，并将在相应服务页面进行展示。您若需要获取、使用本服务，请先提前了解清楚当时关于本服务的收费标准、方式等信息。\n
        3.2收费标准：\n
        3.2.1如果您是企业用户在注册当日应支付\n
            288  元成为职派会员后享受自动派单系统服务。如果您拒绝支付 288  元则没有权利享受自动派单系统服务。\n
        3.3您在使用本服务时不得利用本服务从事以下行为，包括但不限于：\n
　　      （1）发布、传送、传播、储存违反国家法律、危害国家安全统一、社会稳定、公序良俗、社会公德以及侮辱、诽谤、淫秽、暴力的内容；\n
　　      （2）发布、传送、传播、储存侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的内容；\n
　　      （3）虚构事实、隐瞒真相以误导、欺骗他人；\n
　　      （4）发表、传送、传播广告信息及垃圾信息；\n
　　      （5）从事其他违反法律法规、政策及公序良俗、社会公德等的行为。\n
　　    3.4【用户禁止行为】\n
　　      本服务仅供您使用，除非经公司书面许可，您不得进行以下行为：\n
　　      （1）通过任何方式搜集本服务中其他用户的用户名、电子邮件等相关信息，并以发送垃圾邮件、连锁邮件、垃圾短信、即时消息等方式干扰、骚扰其他用户；\n
　　      （2）通过本服务发布包含广告、宣传、促销等内容的信息；\n
　　      （3）将本服务再次许可他人使用；\n
　　      （4）其他未经公司书面许可的行为。\n
　　    3.5【对自己行为负责】\n
　　      您充分了解并同意，您必须为自己注册帐号下的一切行为负责，包括但不限于您所发表的任何内容以及由此产生的任何后果。您应对本服务中的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。\n
　　    3.6【服务的变更、中止或终止】\n
　　      您充分了解并同意，由于互联网服务的特殊性，公司可能会按照相关法规、双方约定或在其他必要时，中止或终止部分或全部的网络服务而无需通知用户，也无需对任何用户或任何第三方承担任何责任。\n
     四、【违约责任】\n
　　    4.1 如果公司发现或收到他人举报您有违反本协议任何行为的，公司有权依法进行独立判断并采取技术手段予以删除、屏蔽或断开相关的信息。同时，公司有权视您的行为性质，对您采取包括但不限于暂停或终止部分或全部本服务、中止或终止您对职派APP使用、追究您法律责任等措施，公司也无需向您退还任何费用，而由此给您带来的损失（包括但不限于通信中断、相关数据清空、未使用的服务费用作为违约金而归公司所有等），由您自行承担，造成公司损失的，您也应予以赔偿。\n
　　    4.2 【对第三方损害的处理】\n
　　      您有违反本协议任何行为，导致任何第三方损害的，您应当独立承担责任公司因此遭受损失的，您也应当一并赔偿。\n
     五、【其他】\n
　　    5.1 【协议的生效】\n
　　    您使用本服务即视为您已阅读并同意受本协议的约束。\n
　　    5.2 【协议签订地】\n
       本协议签订地为北京市朝阳区高碑店环宇国际大厦9层9K\n
       5.3 【适用法律】\n
       本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律\n
       5.4 【争议解决】\n
　　   若您和公司之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，您同意将纠纷或争议提交本协议签订地有管辖权的人民法院管辖。\n
　　   5.5【条款效力】\n
　　   本协议条款无论因何种原因部分无效或不可执行，其余条款仍有效，对双方具有约束力。\n
　
                                北京众巢科技有限公司
                                2018年8月1日
</string>


</resources>