<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_layout_height">

        <ImageView
            android:src="@mipmap/black_return"
            android:padding="12dp"
            android:id="@+id/return_image"
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <TextView
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:text="@string/shai_xuan"
            android:gravity="center"
            android:id="@+id/tilte_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:visibility="invisible"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/personal_center"
            android:layout_width="35dp"
            android:layout_height="35dp" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/choice_employ_city"
                    android:textColor="@color/textColor" />


                <ImageView
                    android:visibility="gone"
                    android:layout_width="12dp"
                    android:layout_height="7.8dp"
                    android:layout_marginLeft="3dp"
                    android:src="@mipmap/bottom" />

            </LinearLayout>


            <TextView
                android:id="@+id/cityText"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/radio_check_false_bg"
                android:gravity="center"
                android:textColorHint="@color/textColor"
                android:hint="@string/no_choice_city"
                android:textColor="@color/textColor"
                android:textSize="11sp" />



            <TextView
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sex" />

            <RadioGroup
                android:id="@+id/sexRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:textSize="11sp"
                    android:id="@+id/sexNoLimitRadioBt"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/no_limit" />


                <RadioButton
                    android:id="@+id/manRadioBt"
                    android:textSize="11sp"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/man" />


                <RadioButton
                    android:id="@+id/wemanRadioBt"
                    android:textSize="11sp"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/weman" />


            </RadioGroup>

            <TextView
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/work_status" />

            <RadioGroup
                android:id="@+id/workRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/workNoLimitRadioBt"
                    android:textSize="11sp"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/no_limit" />


                <RadioButton
                    android:id="@+id/outWorkRadioBt"
                    android:textSize="11sp"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/out_work" />


                <RadioButton
                    android:id="@+id/workRadioBt"
                    android:textSize="11sp"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/in_work" />


            </RadioGroup>

            <TextView
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/work_experence" />

            <RadioGroup
                android:id="@+id/workExperenceRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:textSize="11sp"
                    android:id="@+id/workExpressNoLimit"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/no_limit" />


                <RadioButton
                    android:id="@+id/yingJieShengRadioBt"
                    android:textSize="11sp"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/ying_jie_sheng" />



                <RadioButton
                    android:visibility="gone"
                    android:id="@+id/oneYearRadioBt"
                    android:textSize="11sp"
                    android:text="@string/one_year"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/threeYearRadioBt"
                    android:textSize="11sp"
                    android:text="@string/three_year"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/fiveYearRadioBt"
                    android:textSize="11sp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/five_year"  />


                <RadioButton
                    android:id="@+id/tenYearRadioBt"
                    android:textSize="11sp"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="-300dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/ten_year" />

                <RadioButton
                    android:id="@+id/outTenYearRadioBt"
                    android:textSize="11sp"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/out_ten_year" />


            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/xue_li"
                android:textColor="@color/textColor" />

            <RadioGroup
                android:id="@+id/educationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/noLimitStudyRadioBt"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/no_limit"
                    android:textColor="@color/pai_dan_text"
                    android:textSize="11sp" />


                <RadioButton
                    android:id="@+id/highSchoolRadioBt"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/high_school"
                    android:textColor="@color/pai_dan_text"
                    android:textSize="11sp" />


                <RadioButton
                    android:id="@+id/technicalSchoolRadioBt"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/zhong_zhuan"
                    android:textColor="@color/pai_dan_text"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/highTechnicalSchoolRadioBt"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/da_zhuan"
                    android:textColor="@color/pai_dan_text"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/benKeRadioBt"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="-300dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/ben_ke"
                    android:textColor="@color/pai_dan_text"
                    android:textSize="11sp" />


                <RadioButton
                    android:id="@+id/suoShiRadioBt"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/radio_bt_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/shuo_shi"
                    android:textColor="@color/pai_dan_text"
                    android:textSize="11sp" />


            </RadioGroup>


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:background="@drawable/radio_check_bg"
                    android:textColor="@color/blue_green"
                    android:id="@+id/resetBt"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:text="@string/reset" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:background="@drawable/rounded_bt_bg"
                    android:textColor="@color/white"
                    android:id="@+id/sureBt"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:text="@string/sure" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>



</LinearLayout>