<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/ya_jin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="gone"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="1dp"
                android:layout_gravity="bottom"
                android:textSize="10sp"
                android:text="@string/ke_tui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <TextView
            android:layout_marginRight="30dp"
            android:gravity="right"
            android:text="@string/jin_e"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@mipmap/we_chat"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:layout_marginLeft="5dp"
            android:text="@string/wei_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <RadioButton
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <Button
        android:id="@+id/btn_sure"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/jian_li_item_bt"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/sure"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

</LinearLayout>